style.css
body {
  background-color: #16191f;
  font-family: Arial, Helvetica;
  color: white;
  padding: 3%;
}

.main {
  background-color: #0d1117;
  text-align: center;
}

.main img {
  height: 30%;
  margin: 2%;
  transition: 0.5s;
}

.main img:hover {
  width: 45%;
}

